# voice_project

./: note.md  pyproject.toml
.claude/worktrees/intelligent-napier/: note.md  pyproject.toml
.claude/worktrees/intelligent-napier/frontend/: app.py
.claude/worktrees/intelligent-napier/sample/: genai.py  stt_tts.py
backend/: main.py  voice_phishing_service.py
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/face_auth/: __init__.py  analyzer.py  liveness.py  matcher.py  processor.py  types.py
sample/: app.py  core.py  google_stt.py  stt_tts.py
sample/backend/: main.py
sample/liveness/: __init__.py  challenge_rules.py  face_analyzer.py  session_engine.py  types.py
